--- a/Index.html
+++ b/Index.html
@@ -5,22 +5,22 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="JavaScript image compressor.">
-  <meta name="author" content="Chen Fengyuan">
-  <title>Compressor.js</title>
+  <meta name="author" content="TMH">
+  <title>Image Compressor</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <header class="navbar navbar-light navbar-expand-md">
     <nav class="container">
-      <a class="navbar-brand" href="./">Compressor.js</a>
+      <a class="navbar-brand" href="./">Image Compressor</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbar-collapse" role="navigation">
         <ul class="nav navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/fengyuanchen/compressorjs/blob/master/README.md">Docs</a>
+            <a class="nav-link" href="https://raw.githubusercontent.com/joker71/jorker71.github.io/master/README.md">Docs</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -33,13 +33,7 @@
             </div>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link" href="https://github.com/fengyuanchen/compressorjs" title="View the GitHub project">GitHub</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link" href="https://fengyuanchen.github.io/" title="Explore more projects">Explore</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link" href="https://chenfengyuan.com/" title="About the author">About</a>
+            <a class="nav-link" href="https://www.facebook.com/hoang.nhat.33633344?ref=bookmarks" title="About the author">About</a>
           </li>
         </ul>
       </div>
@@ -50,7 +44,7 @@
     <div class="container">
         <div class="row">
           <div class="col-md">
-            <h1>Compressor.js <small class="h6">v1.0.6</small></h1>
+            <h1>Imgage Compressor <small class="h6">v1.0.1</small></h1>
             <p class="lead">JavaScript image compressor.</p>
           </div>
           <div class="col-md">
@@ -226,17 +220,7 @@
     </div>
   </div>
 
-  <footer class="footer">
-    <div class="container">
-      <p class="heart"></p>
-      <nav class="nav flex-wrap justify-content-center mb-3">
-        <a class="nav-link" href="https://github.com/fengyuanchen/compressorjs">GitHub</a>
-        <a class="nav-link" href="https://github.com/fengyuanchen/compressorjs/releases">Releases</a>
-        <a class="nav-link" href="https://github.com/fengyuanchen/compressorjs/blob/master/LICENSE">License</a>
-        <a class="nav-link" href="https://chenfengyuan.com/">About</a>
-      </nav>
-    </div>
-  </footer>
+  
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
